<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".1" />

        <View
            android:id="@+id/outlined_shape"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha=".4"
            android:background="@drawable/shape_outlined_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <TextView
            android:id="@+id/title"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="@dimen/margin_tiny"
            android:paddingEnd="@dimen/margin_tiny"
            android:text="@string/physical_characteristics"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <ImageView
            android:id="@+id/gender_icon"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_big"
            android:src="@drawable/ic_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:tint="@color/gray" />

        <TextView
            android:id="@+id/gender_hint"
            style="@style/Text.Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/gender_hint"
            app:layout_constraintBottom_toBottomOf="@id/gender_icon"
            app:layout_constraintStart_toEndOf="@id/gender_icon"
            app:layout_constraintTop_toTopOf="@id/gender_icon" />

        <TextView
            android:id="@+id/gender"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/gender_hint"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            tools:text="Female" />


        <ImageView
            android:id="@+id/age_icon"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_big"
            android:src="@drawable/ic_age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_icon"
            app:tint="@color/gray" />

        <TextView
            android:id="@+id/age_hint"
            style="@style/Text.Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/age_hint"
            app:layout_constraintBottom_toBottomOf="@id/age_icon"
            app:layout_constraintStart_toEndOf="@id/age_icon"
            app:layout_constraintTop_toTopOf="@id/age_icon" />

        <TextView
            android:id="@+id/age"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/age_hint"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toTopOf="@id/age_hint"
            tools:text="102" />

        <ImageView
            android:id="@+id/height_icon"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginBottom="@dimen/margin_big"
            android:src="@drawable/ic_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_icon"
            app:tint="@color/gray" />

        <TextView
            android:id="@+id/height_hint"
            style="@style/Text.Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/height_hint"
            app:layout_constraintBottom_toBottomOf="@id/height_icon"
            app:layout_constraintStart_toEndOf="@id/height_icon"
            app:layout_constraintTop_toTopOf="@id/height_icon" />

        <TextView
            android:id="@+id/height"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/height_hint"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toTopOf="@id/height_hint"
            tools:text="102" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
